--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,12 @@
 		    <groupId>org.apache.james</groupId>
 		    <artifactId>apache-mailet-base</artifactId>
 		    <version>1.1</version>	    
-		</dependency>	
+		</dependency>
+		<dependency>
+		    <groupId>org.nhind</groupId>
+		    <artifactId>gateway</artifactId>
+		    <version>3.0.1</version>	    
+		</dependency>				
 	    <dependency>
 	        <groupId>org.apache.camel</groupId>
 	        <artifactId>camel-mina</artifactId>
